[package]
name = "maius-invest"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "maius_invest"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-spl = { version = "0.26.0", features = ["dex"] }
anchor-lang = "0.26.0"
clockwork-sdk = "1.4.0"